--- a/test.html
+++ b/test.html
@@ -1,5 +1,14 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
 <h1>Hey. I'm a big heading</h1>
-<p>Hey i'm a paragraph element. cool huh?</p>
+<p>Hey i'm a <b>paragraph</b> element. cool huh?</p>
 <a href="https://google.com" target="_blank" title="lets go to google">click me! i'm a link!</a>
+<p>My name is:<br>
+	Kitty cat</p>
+<img src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png">
+</body>
+</html>
